--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "^1.18.2",
     "@react-native-community/cli": "^11.3.3",
     "@react-native-firebase/app": "^18.0.0",
+    "@react-native-firebase/auth": "^18.1.0",
     "@react-native-firebase/firestore": "^18.0.0",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
