--- a/package.json
+++ b/package.json
@@ -15,20 +15,23 @@
     "@react-native-firebase/app": "^18.0.0",
     "@react-native-firebase/auth": "^18.1.0",
     "@react-native-firebase/firestore": "^18.0.0",
+    "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@reduxjs/toolkit": "^1.9.5",
     "nativewind": "^2.0.11",
     "react": "18.1.0",
     "react-native": "0.70.0",
+    "react-native-gesture-handler": "^2.12.1",
     "react-native-image-crop-picker": "^0.40.0",
     "react-native-razorpay": "^2.3.0",
+    "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "^3.22.0",
     "react-native-select-dropdown": "^3.3.4",
     "react-native-vector-icons": "^9.2.0",
-    "react-redux": "^8.1.0",
-    "tailwindcss": "^3.3.2"
+    "react-redux": "^8.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -38,7 +41,8 @@
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.72.1",
-    "react-test-renderer": "18.1.0"
+    "react-test-renderer": "18.1.0",
+    "tailwindcss": "^3.3.2"
   },
   "jest": {
     "preset": "react-native"
