--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@cloudinary/react": "^1.13.0",
     "@cloudinary/url-gen": "^1.19.0",
+    "@notifee/react-native": "^7.8.2",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-navigation/bottom-tabs": "^6.5.20",
@@ -28,11 +29,14 @@
     "react-native-gesture-handler": "^2.17.1",
     "react-native-image-crop-picker": "^0.41.2",
     "react-native-image-picker": "^7.1.2",
+    "react-native-notification-sounds": "^0.5.8",
     "react-native-razorpay": "^2.3.0",
     "react-native-reanimated": "^3.12.1",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.32.0",
     "react-native-select-dropdown": "^4.0.1",
+    "react-native-star-rating-widget": "^1.8.0",
+    "react-native-svg": "^15.3.0",
     "react-native-toast-message": "^2.2.0",
     "react-native-vector-icons": "^10.1.0",
     "react-redux": "^9.1.2",
