--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "react-native-image-crop-picker": "^0.41.2",
     "react-native-image-picker": "^7.1.2",
     "react-native-notification-sounds": "^0.5.8",
+    "react-native-pager-view": "^6.3.3",
     "react-native-razorpay": "^2.3.0",
     "react-native-reanimated": "^3.12.1",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.32.0",
     "react-native-select-dropdown": "^4.0.1",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-star-rating-widget": "^1.8.0",
     "react-native-svg": "^15.3.0",
     "react-native-toast-message": "^2.2.0",
