--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.7.5",
+    "uuid": "^10.0.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
