location iq api added for geocoding

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@notifee/react-native": "^7.8.2",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/checkbox": "^0.5.17",
+    "@react-native-community/geolocation": "^3.3.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.17",
@@ -27,9 +28,11 @@
     "react": "18.2.0",
     "react-native": "0.74.2",
     "react-native-fs": "^2.20.0",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.17.1",
     "react-native-image-crop-picker": "^0.41.2",
     "react-native-image-picker": "^7.1.2",
+    "react-native-maps": "^1.17.1",
     "react-native-notification-sounds": "^0.5.8",
     "react-native-pager-view": "^6.3.3",
     "react-native-razorpay": "^2.3.0",
