--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.7.2",
     "cloudinary-react-native": "^1.0.0",
     "formik": "^2.4.6",
+    "lodash": "^4.17.21",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.2",
